Fixed a css bug with the new background color collapsed navbar and the search box.

--- a/CmsWeb/src/less/navbar.less
+++ b/CmsWeb/src/less/navbar.less
@@ -38,24 +38,24 @@
         background-color: #21252b !important;
     }
        
-    .collapsing ul li a, .in ul li a {
+    .collapsing ul.navbar-nav li a, .in ul.navbar-nav li a {
         color: #c6ccd0 !important; 
         background-color: #21252b !important;
     }
 
-    .collapsing ul li.open a.dropdown-toggle, 
+    .collapsing ul.navbar-nav li.open a.dropdown-toggle, 
     .in ul li.open a.dropdown-toggle {
         color:  #eca91f !important; 
         background-color: #262b31 !important;
     }
 
-    .collapsing ul li.dropdown-header, 
-    .in ul li.dropdown-header {
+    .collapsing ul.navbar-nav li.dropdown-header, 
+    .in ul.navbar-nav li.dropdown-header {
         color:  #fff !important;
     }
 
-    .collapsing ul li a:hover, 
-    .in ul li a:hover {
+    .collapsing ul.navbar-nav li a:hover, 
+    .in ul.navbar-nav li a:hover {
         color: #eca91f !important; 
         background-color: #262b31 !important;
     }
